@@ -2416,8 +2416,8 @@ Configuration Example:
     objects_save_file      = /etc/naemon/conf.d/bp_generated.cfg
     objects_templates_file = /etc/naemon/conf.d/thruk_bp_templates.cfg
     objects_reload_cmd     = /etc/init.d/naemon reload
-    #pre_obj_save_cmd      =
-    #post_obj_save_cmd     =
+    #pre_save_cmd          =
+    #post_save_cmd         =
     refresh_interval       = 1
   </Component>
 
@@ -2443,11 +2443,17 @@ User maintained file containing templates used for business process services.
 === objects_reload_cmd
 Command to apply changes to the objects_save_file.
 
-=== pre_obj_save_cmd
+=== pre_save_cmd
 Run this hook command before saving a business process.
+Along with the default environment variables set, there are two extra variables set which can be used:
 
-=== post_obj_save_cmd
+  - THRUK_BP_FILE:  contains the file name of the business process being saved
+  - THRUK_BP_STAGE: is set to 'pre'
+
+=== post_save_cmd
 Run this hook command after saving a business process.
+The same environment variables will be used as in the pre_save_cmd, except
+stage is set to 'post'.
 
 === refresh_interval
 Refresh interval defines how often business processes
